--- a/assets/css/main-modular.css
+++ b/assets/css/main-modular.css
@@ -23,6 +23,7 @@
 @import 'components/portfolio.css';
 @import 'components/contact.css';
 @import 'components/ui-elements.css';
+@import 'components/back-to-top.css';
 /* TODO: Add these as we create them:
 @import 'components/footer.css';
 */
